--- a/AutomationBot/AutomationBot.csproj
+++ b/AutomationBot/AutomationBot.csproj
@@ -7,4 +7,11 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="DocumentFormat.OpenXml" Version="3.2.0" />
+    <PackageReference Include="Selenium.Support" Version="4.26.1" />
+    <PackageReference Include="Selenium.WebDriver" Version="4.26.1" />
+    <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="132.0.6834.1500-beta" />
+  </ItemGroup>
+
 </Project>
